name:                write-you-a-scheme
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jd95/write-you-a-scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          jeffreydwyer95@outlook.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , src/Lexer/Token.x
                   , src/Parser/Grammar.y

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lexer.Token
                     , Parser.Grammar
                     , Parser.AST
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , microlens-platform
                     , bytestring
                     , array
                     , string-conv
                     , recursion-schemes
                     , free
  default-language:    Haskell2010

executable write-you-a-scheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , write-you-a-scheme
  default-language:    Haskell2010

test-suite write-you-a-scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , write-you-a-scheme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jd95/write-you-a-scheme
